--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -22,19 +22,23 @@ jobs:
       - name: Install Semgrep
         run: pip install semgrep
 
-      # 官方规则库扫描
-      - name: Run Semgrep with JavaScript and Security Audit rules
+
+     # - name: Authenticate Semgrep Pro
+     #   env:
+     #     SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
+     #   run: semgrep login
+
+
+      # 使用多种官方规则库扫描
+      - name: Run Semgrep with Official Rules
         run: |
-          semgrep --config "p/javascript" --config "p/security-audit" .
+          semgrep --config "p/javascript" \
+                  --config "p/typescript" \
+                  --config "p/xss" \
+                  --config "p/sql-injection" \
+                  --config "p/security-audit" .
 
-      # Trail of Bits 规则库扫描
-      - name: Run Semgrep with Trail of Bits rules
+      # 使用 Trail of Bits 规则库扫描
+      - name: Run Semgrep with Trail of Bits Rules
         run: semgrep --config "p/trailofbits" .
-
-      # Elttam 规则库扫描（需先克隆仓库）
-      - name: Clone Elttam Rules Repository
-        run: git clone https://github.com/elttam/semgrep-rules.git
-
-      - name: Run Semgrep with Elttam Rules
-        run: semgrep --config ./semgrep-rules/rules-audit .
 
